hphp/test/zend/good/Zend/tests/bug55305.php
<?php
class Foo {
  var $foo = "test";
}

$f = new Foo();
$f->bar =& $f->foo;
var_dump($f->foo);
var_dump($f->bar);
?>